# bestlib

./: .gitignore  ANALISIS_BRANCH_RESTORE.md  ANALISIS_CODIGO_COMPLETO.md  ANALISIS_COMPLETO.md  ANALISIS_COMPLETO_PROYECTO.md  ANALISIS_COMPLETO_PROYECTO_FINAL.md  ANALISIS_ERRORES_Y_SOLUCION.md  ANALISIS_ESTRUCTURA_MODULAR.md  ANALISIS_EXHAUSTIVO_COMPLETO.md  ANALISIS_EXHAUSTIVO_PROBLEMAS.md  ANALISIS_FALENCIAS_2025.md  ANALISIS_FALENCIAS_ACTUALIZADO.md  ANALISIS_FALENCIAS_ACTUALIZADO_2025.md  ANALISIS_FALENCIAS_COMPLETO_2025.md  ANALISIS_FALENCIAS_FINAL.md  ANALISIS_FALENCIAS_NUEVO.md  ANALISIS_FALENCIAS_NUEVO_2025.md  ANALISIS_FALENCIAS_RESTANTES.md  ANALISIS_SISTEMA_SELECCION.md  ANALISIS_SISTEMA_SELECCION_COMPLETO.md  ARQUITECTURA.md  AUDITORIA_COMPAT.md  AUDITORIA_COMPLETA_2025.md  AUDITORIA_COMPLETA_NUEVA_2025.md  AUDITORIA_DATOS.md  AUDITORIA_EXCEPCIONES.md  AUDITORIA_JAVASCRIPT.md  AUDITORIA_LEGACY.md  BESTLIB_modularization_proposal.md  COMPARISON_V1_V2.md  CONTRIBUTING.md  CORRECCIONES_APLICADAS.md  CORRECCIONES_CRITICAS_APLICADAS.md  CORRECCIONES_CRITICAS_FASE2.md  CORRECCIONES_GRAFICOS_AVANZADOS.md  DEBUG_BOXPLOT_DUPLICACION.md  DEBUG_VISTAS_ENLAZADAS.md  DEEPNOTE_FIXES.md  DEEPNOTE_INSTALL.md  DEMO_PRESENTATION.ipynb  (+70 more)
.github/workflows/: ci.yml
BESTLIB/: __init__.py  linked.py  matrix.js  matrix.py  reactive.py  style.css  version.py
BESTLIB-backup/: matrix.js  reactive.py
BESTLIB-backup/charts/: ecdf.py  errorbars.py  heatmap.py  hexbin.py  hist2d.py  ribbon.py  star_coordinates.py  violin.py
BESTLIB-backup/data/: aggregators.py  preparators.py  validators.py
BESTLIB-backup/render/: html.py
BESTLIB-backup/utils/: json.py
BESTLIB/api/: __init__.py
BESTLIB/charts/: __init__.py  bar.py  base.py  distplot.py  ecdf.py  errorbars.py  fill_between.py  funnel.py  grouped_bar.py  hexbin.py  hist2d.py  horizontal_bar.py  kde.py  line.py  line_plot.py  parallel_coordinates.py  polar.py  qqplot.py  radviz.py  registry.py  ribbon.py  ridgeline.py  rug.py  scatter.py  spec_utils.py  star_coordinates.py  step_plot.py  violin.py
BESTLIB/compat/: chart_wrappers.py  matrix_wrapper.py
BESTLIB/core/: __init__.py  comm.py  deepnote.py  events.py  exceptions.py  layout.py  validation.py
BESTLIB/data/: aggregators.py  preparators.py  transformers.py  validators.py
BESTLIB/layouts/: __init__.py  matrix.py  reactive.py
BESTLIB/reactive/: __init__.py  linking.py  selection.py
BESTLIB/reactive/engines/: colab.py  jupyter.py
BESTLIB/render/: assets.py  builder.py  html.py
BESTLIB/utils/: __init__.py  figsize.py  imports.py  json.py  logging_config.py  pandas_compat.py
bestlib-v2/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bestlib-v2/bestlib/: __init__.py
bestlib-v2/bestlib/assets/: style.css
bestlib-v2/bestlib/charts/: fill_between.py  grouped_bar.py  kde.py  scatter.py  step_plot.py
bestlib-v2/bestlib/core/: comm.py
bestlib-v2/bestlib/data/: transformers.py
bestlib-v2/bestlib/layouts/: reactive.py
bestlib-v2/bestlib/reactive/: selection.py
bestlib-v2/bestlib/render/: assets.py
bestlib-v2/examples/: quick_start.ipynb
bestlib-v2/tests/: test_basic.py
bestlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datasets/: f1_results.csv  f1_results_2010.csv
docs/: API_PUBLICA.md  BUGFIXES.md  CATALOGO_GRAFICOS_COMPLETO.md  CORRECCIONES_APLICADAS.md  CORRECCIONES_DEBUGGING.md  INVESTIGACION_ERRORES.md  INVESTIGACION_ERRORES_ACTUALIZADA.md  INVESTIGACION_ERRORES_NO_VISUALIZACION.md  INVESTIGACION_ERRORES_NUEVOS.md  JS_PROTOCOL.md  PLAN_CORRECCION_ERRORES.md  PLAN_CORRECCION_ERRORES_CRITICOS.md  PLAN_CORRECCION_FINAL.md  QUICK_REFERENCE.md  README.md  RELEASE.md  SELECCION_REACTIVA.md
docs/development/: ANALISIS_COMPLETO_CODIGO.md  ANALISIS_COMPLETO_IMPORTS.md  ANALISIS_COMPLETO_PROBLEMA_COLAB.md  ANALISIS_COMPLETO_PROYECTO.md  ANALISIS_EXHAUSTIVO_ACTUALIZADO.md  ANALISIS_EXHAUSTIVO_COMPLETO.md  AXIS_LABELS_UPDATE.md  CAMBIOS_REALIZADOS.md  CAPACIDADES_INTERACTIVIDAD.md  CHANGES_NEWCHARTS.md  COLAB_INSTALL.md  CONTEO_TOTAL_GRAFICOS.md  DIAGNOSTICO_RENDERING_NUEVOS_GRAFICOS.md  DOCUMENTACION_COMPLETA.md  EJEMPLOS_NUEVOS_GRAFICOS.md  EJEMPLOS_NUEVOS_GRAFICOS_COMPLETOS.md  ESTADO_IMPLEMENTACION_KDE.md  ESTRUCTURA_MODULAR_FINAL.md  FIX_COLAB_RENDERING.md  FIX_DEBUG_SYSTEM.md  FIX_EXPANSION_INFINITA_MATRIZ.md  FIX_GRAFICOS_AVANZADOS_VACIOS.md  FIX_IMPORT_PANDAS_DEFENSIVO.md  FIX_ISD3SPEC.md  GETTING_STARTED.md  GUIA_PYPI.md  GUIA_USO_COLAB.md  INSTALACION_COLAB.md  PRUEBA_RAPIDA.md  README.md  REPARACION_COMPLETA_BESTLIB.md  RESUMEN_ANALISIS_FINAL.md  RESUMEN_IMPLEMENTACIONES.md  RESUMEN_IMPLEMENTACION_NUEVOS_GRAFICOS.md  SOLUCIONES_IMPORT_ERROR.md  SOLUCION_DEBUG_COMPLETA.md  SOLUCION_ERROR_MAP_METHODS.md  SOLUCION_IMPORTS_CIRCULARES_COMPLETA.md  SOLUCION_IMPORT_ERROR.md  SOLUCION_INTERACTIVIDAD_COMPLETA.md  (+4 more)
examples/: CELDAS_COMPLETAS.md  COLAB_GUIDE.md  COLAB_INSTALLATION.ipynb  EJEMPLO_CHARTREGISTRY.md  EJEMPLO_CHARTREGISTRY_NOTEBOOK.md  EJEMPLO_COMPLETO_4_GRAFICOS.md  EJEMPLO_COMPLETO_COLAB.md  EJEMPLO_MERGE_AUTOMATICO.md  EJEMPLO_MERGE_AUTOMATICO_COMPLETO.md  EJEMPLO_MERGE_Y_LINKED_VIEWS.md  LINKED_VIEWS_GUIDE.md  REACTIVE_EXAMPLE.md  demo.ipynb  demo_advanced.ipynb  demo_axis_labels.ipynb  demo_brush.md  demo_colab.ipynb  demo_completo.ipynb  demo_completo_bestlib.ipynb  demo_completo_dataset_grande.ipynb  demo_completo_todas_funcionalidades.ipynb  demo_matriz.ipynb  demo_modular.ipynb  demo_todos_graficos_dataset_real.ipynb  ejemplo_completo_corregido.py  ejemplos_nuevas_funcionalidades.ipynb  new_charts_test.py  pipeline_ml_f1_completo.ipynb  quick_start.ipynb  test_completo_iris.ipynb  test_graficos.ipynb
js/: package.json
js/src/: index.js
scripts/: README.md  colab_install_fix.sh
tests/: README.md  __init__.py  conftest.py  test_charts.py  test_imports.py  test_legacy_compatibility.py  test_matrixlayout.py
