[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bestlib"
version = "0.1.0"
description = "MatrixLayout widget for dashboards with D3.js"
authors = [
    { name="Nahia, Alejandro, Max" }
]
readme = "README.md"
requires-python = ">=3.8"
# Dependencias requeridas para funcionalidad básica
# Compatible con Google Colab y Jupyter Notebooks
# NOTA: 
#   - ipython>=7.0,<8.0: Limita a versiones 7.x para compatibilidad con Colab
#     Jupyter Notebooks puede usar 7.x sin problemas
#   - ipywidgets>=7.6,!=7.8.5,<7.8: Evita la versión 7.8.5 problemática en Colab
#     Usa solo 7.6-7.7 para evitar arrastrar notebook>=7.0 (incompatible con Colab)
#   - numpy>=1.20,<2.1: Compatible con TensorFlow (<2.2) y numba (<2.1) en Colab
#   - pandas>=1.3,<2.3: Limita a versiones 2.2.x para compatibilidad con Colab
#   - El código maneja la ausencia de estas dependencias con try/except
dependencies = [
    "ipython>=7.0,<8.0",
    "ipywidgets>=7.6,!=7.8.5,<7.8",
    "pandas>=1.3,<2.3",
    "numpy>=1.20,<2.1",
    "python-dateutil>=2.8.2",
    "pytz>=2020.1",
    "traitlets>=5.0",
    "matplotlib-inline>=0.1.5",
]

# Dependencias opcionales (solo para funcionalidades específicas)
[project.optional-dependencies]
confusion_matrix = ["scikit-learn>=1.0.0"]  # Solo necesario para add_confusion_matrix()

[tool.setuptools]
# Usar find_packages para incluir todos los subpaquetes automáticamente
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
BESTLIB = ["*.js", "*.css"]
