[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bestlib"
version = "0.1.0"
description = "MatrixLayout widget for dashboards with D3.js"
authors = [
    { name="Nahia, Alejandro, Max" }
]
readme = "README.md"
requires-python = ">=3.8"
# Sin dependencias obligatorias - el código maneja todo con try/except
# Esto evita que pip toque cualquier paquete existente
dependencies = []

# Dependencias opcionales (solo para funcionalidades específicas)
# Estas NO se instalan automáticamente - el código funciona sin ellas
# Si las necesitas, instálalas manualmente o usa: pip install bestlib[all]
[project.optional-dependencies]
core = [
    "python-dateutil>=2.8.0",
    "pytz>=2020.0",
    "traitlets>=5.0",
    "matplotlib-inline>=0.1.0",
]
jupyter = [
    "ipython>=7.0",
    "ipywidgets>=7.6,!=7.8.5",
]
pandas = [
    "pandas>=1.3",
    "numpy>=1.20",
]
confusion_matrix = ["scikit-learn>=1.0.0"]  # Solo necesario para add_confusion_matrix()
all = [
    "python-dateutil>=2.8.0",
    "pytz>=2020.0",
    "traitlets>=5.0",
    "matplotlib-inline>=0.1.0",
    "ipython>=7.0",
    "ipywidgets>=7.6,!=7.8.5",
    "pandas>=1.3",
    "numpy>=1.20",
    "scikit-learn>=1.0.0",
]

[tool.setuptools]
# Usar find_packages para incluir todos los subpaquetes automáticamente
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
BESTLIB = ["*.js", "*.css"]
