[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bestlib"
version = "2.0.0"
description = "Beautiful & Efficient Visualization Library para Jupyter Notebooks"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Nahia Escalante"}
]
keywords = ["visualization", "jupyter", "d3", "interactive", "dashboard", "charts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Jupyter",
]

dependencies = [
    "ipython>=7.0.0",
    "ipywidgets>=7.0.0",
]

[project.optional-dependencies]
full = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/NahiaEscalante/bestlib"
Documentation = "https://github.com/NahiaEscalante/bestlib#readme"
Repository = "https://github.com/NahiaEscalante/bestlib"
"Bug Tracker" = "https://github.com/NahiaEscalante/bestlib/issues"

[tool.setuptools]
packages = ["bestlib"]

[tool.setuptools.package-data]
bestlib = ["assets/*.js", "assets/*.css"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
